correcciones y compilaciones para distintos SO